--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Salut, T V A bien ?</div>
+        <div>Salut, T V A bien ? alors la vie bien tranquille ????</div>
     </body>
 </html>
